[package]
name = "volume-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "volume_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
thiserror = "2.0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0", features = [] }
ndk-glue = { version = "0.7.0", features = [] }
